# Jaewon-Kim-Cognizant

./: .gitignore  README.md
activites/: example.txt
java/: employees.json  output1.txt
java/assignments/: Control.java
java/assignments/nov11/: ControlTest.java  TestArray.java
java/note/: StringTest.java  Student.java
practice/demo/: pom.xml
python/: abstractiondemo.py  inheritancedemo.py  persist.db  person.py  python-object-oriented.ipynb
python/.ipynb_checkpoints/: python-object-oriented-checkpoint.ipynb
python/basics/files/: Greet.py
python/basics/notebook/: num_py_basics.ipynb  python-basics-day-2.ipynb  python-basics.ipynb
sql/: Functions.sql  SampleDBQueries.sql  StoreProcedureDemo.sql  Triggers.sql  docker-compose.yml
sql/assignment/: SQLChallenge.sql  Simple.sql
sql/java/sqldemo/: pom.xml
sql/python/: mysqlalchemy.py  mysqldemo.py
testing/unit/: pom.xml
week6-unit-testing/day1/exercises/: pom.xml
week6-unit-testing/day2/exercises/: pom.xml
week6-unit-testing/day4/exersices/: calculator_tests.json  conftest.py  math_operations.py  models.py  string_calculator.py  test_conditional_skipping.py  test_data_driven_pytest.py  test_string_calculator.py  unittest_exercise.py  user_validation_tests.json
week6-unit-testing/day5/lesson/pymock-demo/: pyproject.toml
week6-unit-testing/day5/lesson/pymock-demo/src/pymock_demo/: odometer.py  total.py
week6-unit-testing/day5/lesson/pymock-demo/tests/: test_total.py  testodometer.py  unittestmock.py
week7/day1/: BookHaven API Tests.postman_collection.json
week8/study/: pom.xml
(+224 files in other folders)
