[project]
name = "pymock-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaewon-Kim13",email = "jaewon.kim1326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pymock_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
